--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -20,7 +20,7 @@
         Today
       </div>
       <div
-        class="btn btn-primary"
+        class="btn btn-secondary"
         mwlCalendarNextView
         [view]="view"
         [(viewDate)]="viewDate"
@@ -47,7 +47,7 @@
         Week
       </div>
       <div
-        class="btn btn-primary"
+        class="btn btn-secondary"
         (click)="view = CalendarView.Day"
         [class.active]="view === CalendarView.Day">
         Day
