--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -75,8 +75,12 @@ pre {
 }
 
 .title-calendar {
-  margin-top: 1rem;
+  margin-top: 0;
   text-align: center;
   background-color: blue;
   color: white;
+}
+
+.primary-color {
+  text-align: center;
 }
